--- a/src/main/resources/templates/todo.html
+++ b/src/main/resources/templates/todo.html
@@ -27,14 +27,15 @@
                 <div class="card my-4 card-custom">
                     <h5 class="card-header header-custom">Your data</h5>
                     <div class="card-body">
-                        <form method="post" th:action="@{/todo}">
+                        <form method="post" th:action="@{/todo}" th:object="${todo}">
+                            <input th:value="${todo.id}" th:name="id" name="id" type="hidden">
                             <div class="form-group ">
                                 <div class="form-row mb-3">
                                     <div class="col-2">
                                         <label for="content">Todo:</label>
                                     </div>
                                     <div class="col">
-                                        <input class="form-control" th:value="${content}" th:name="content"
+                                        <input class="form-control" th:value="${todo.content}" th:name="content"
                                             th:id="content" id="content" name="content"
                                             placeholder="Give me a present <3" type="text">
                                     </div>
