--- a/src/main/resources/templates/todos.html
+++ b/src/main/resources/templates/todos.html
@@ -13,38 +13,51 @@
     <link rel="shortcut icon" type="img/favicon.ico"
         th:href="@{https://invexdesign.com/blog/wp-content/themes/invex/images/invex-v-white.png}" />
 
+    <!-- Custom CSS -->
+    <link href="../static/css/footer.css" rel="stylesheet" th:href="@{/css/footer.css}">
+    <link href="../static/css/header.css" rel="stylesheet" th:href="@{/css/header.css}">
+    <link href="../static/css/index.css" rel="stylesheet" th:href="@{/css/index.css}">
+    <link href="../static/css/todo.css" rel="stylesheet" th:href="@{/css/todo.css}">
+
     <!-- Bootstrap core CSS -->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"
         th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
 
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
-    <div class="container">
-        <div class="row justify-content-center">
-            <table class="table">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">Todo</th>
-                        <th scope="col"> </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="todos : ${todos}">
-                        <td th:text="${todos.content}">Content</td>
-                        <td>
-                            <a th:href="@{/delete/{id}(id = ${todos.id})}" class="btn mr-3 mt-4 float-right"
-                                style="color: inherit;"><i class='fas fa-trash-alt'></i></a>
-                            <a th:href="@{/todo/{id}(id = ${todos.id})}" class="btn mr-3 mt-4 float-right"
-                                style="color: inherit;"><i class='fas fa-pencil-alt'></i></a>
-                        </td>
-                    </tr>
+    <header th:replace="fragments/header.html :: top">
+    </header>
 
-                </tbody>
-            </table>
+
+    <main class="container">
+        <div class="row justify-content-center">
+            <div class="text-center" style="min-width: 600px;">
+                <a href="/todo" class="btn mb-4" style="color: inherit;"><i class="fas fa-plus"></i> Add a
+                    Todo</a>
+                <div class="card my-4 card-custom">
+                    <h5 class="card-header header-custom">Here are your Todos</h5>
+                    <div class="card-body text-center" th:each="todos : ${todos}">
+                        <p class="mt-1" th:text="${todos.content}">Content</p>
+                        <span class="justify-content-center">
+                            <a th:href="@{/delete/{id}(id = ${todos.id})}" class="btn" style="color: inherit;"><i
+                                    class='fas fa-trash-alt'></i></a>
+                            <a th:href="@{/todo/{id}(id = ${todos.id})}" class="btn" style="color: inherit;"><i
+                                    class='fas fa-pencil-alt'></i></a>
+                        </span>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <a href="/">Go home</a>
+
+    </main>
+
+    <footer th:replace="fragments/footer.html :: bottom">
+    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="../static/vendor/jquery/jquery.min.js" th:src="@{/vendor/jquery/jquery.min.js}"></script>
