--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,17 +15,16 @@
 
 
     <!-- Custom CSS -->
-    <link href="../static/css/footer.css" rel="stylesheet" th:href="@{/css/footer.css}">
-    <link href="../static/css/header.css" rel="stylesheet" th:href="@{/css/header.css}">
-    <link href="../static/css/index.css" rel="stylesheet" th:href="@{/css/index.css}">
+    <link href="../static/css/footer.css" rel="stylesheet" th:href="@{/css/footer.css}" type="text/css" media="all">
+    <link href="../static/css/header.css" rel="stylesheet" th:href="@{/css/header.css}" type="text/css" media="all">
+    <link href="../static/css/index.css" rel="stylesheet" th:href="@{/css/index.css}" type="text/css" media="all">
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"
-        th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
+    <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
+        type="text/css">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
