--- a/src/main/resources/templates/todo.html
+++ b/src/main/resources/templates/todo.html
@@ -18,14 +18,13 @@
         th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
 
     <!-- Custom CSS -->
-    <link href="../static/css/footer.css" rel="stylesheet" th:href="@{/css/footer.css}">
-    <link href="../static/css/header.css" rel="stylesheet" th:href="@{/css/header.css}">
-    <link href="../static/css/index.css" rel="stylesheet" th:href="@{/css/index.css}">
-    <link href="../static/css/todo.css" rel="stylesheet" th:href="@{/css/todo.css}">
+    <link href="../static/css/footer.css" rel="stylesheet" th:href="@{/css/footer.css}" type="text/css">
+    <link href="../static/css/header.css" rel="stylesheet" th:href="@{/css/header.css}" type="text/css">
+    <link href="../static/css/index.css" rel="stylesheet" th:href="@{/css/index.css}" type="text/css">
 
     <!-- Bootstrap core CSS -->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"
-        th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
+        th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" type="text/css"> <!-- Google Font -->
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
