fix nav on index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,15 +14,14 @@
     <link rel="shortcut icon" type="img/favicon.ico"
         th:href="@{https://invexdesign.com/blog/wp-content/themes/invex/images/invex-v-white.png}" />
 
-
     <!-- Custom CSS -->
-    <link href="../static/css/footer.css" rel="stylesheet" th:href="@{/css/footer.css}" type="text/css" media="all">
-    <link href="../static/css/header.css" rel="stylesheet" th:href="@{/css/header.css}" type="text/css" media="all">
-    <link href="../static/css/index.css" rel="stylesheet" th:href="@{/css/index.css}" type="text/css" media="all">
+    <link href="../static/css/footer.css" rel="stylesheet" th:href="@{/css/footer.css}" type="text/css">
+    <link href="../static/css/header.css" rel="stylesheet" th:href="@{/css/header.css}" type="text/css">
+    <link href="../static/css/index.css" rel="stylesheet" th:href="@{/css/index.css}" type="text/css">
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
-        type="text/css">
+    <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"
+        th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" type="text/css">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
