--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,11 +1,9 @@
-<footer class="text-center" th:fragment="bottom" xmlns:th="http://www.thymeleaf.org">
-
-    <p class="col-13 mt-4 float-none">
-        Made with
-        <span style="margin:3px; color: red;" role="img" aria-label="heart">
-            ❤️
-        </span>
-        by Sylène Manusset | 2020
-    </p>
-
+<footer th:fragment="bottom" xmlns:th="http://www.thymeleaf.org">
+  <p>
+    Made with
+    <span style="margin: 3px; color: red" role="img" aria-label="LOVE">
+      ❤️
+    </span>
+    by Sylène Manusset | 2020
+  </p>
 </footer>
