--- a/src/main/resources/templates/todos.html
+++ b/src/main/resources/templates/todos.html
@@ -1,68 +1,110 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
     <title>Your Todo List</title>
-    <meta name="description"
-        content="End of training, with the last project at WCS school, in order to mobilize the knowledge aquired during the session">
-    <meta name="author" content="Sylène Manusset">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="shortcut icon" type="img/favicon.ico"
-        th:href="@{https://invexdesign.com/blog/wp-content/themes/invex/images/invex-v-white.png}" />
+    <meta
+      name="description"
+      content="End of training, with the last project at WCS school, in order to mobilize the knowledge aquired during the session"
+    />
+    <meta name="author" content="Sylène Manusset" />
+
+    <link
+      rel="shortcut icon"
+      type="img/favicon.ico"
+      th:href="@{https://invexdesign.com/blog/wp-content/themes/invex/images/invex-v-white.png}"
+    />
 
     <!-- Custom CSS -->
-    <link href="../static/css/footer.css" rel="stylesheet" th:href="@{/css/footer.css}">
-    <link href="../static/css/header.css" rel="stylesheet" th:href="@{/css/header.css}">
-    <link href="../static/css/index.css" rel="stylesheet" th:href="@{/css/index.css}">
-    <link href="../static/css/todo.css" rel="stylesheet" th:href="@{/css/todo.css}">
+    <link
+      href="../static/css/footer.css"
+      rel="stylesheet"
+      th:href="@{/css/footer.css}"
+    />
+    <link
+      href="../static/css/header.css"
+      rel="stylesheet"
+      th:href="@{/css/header.css}"
+    />
+    <link
+      href="../static/css/index.css"
+      rel="stylesheet"
+      th:href="@{/css/index.css}"
+    />
+    <link
+      href="../static/css/todo.css"
+      rel="stylesheet"
+      th:href="@{/css/todo.css}"
+    />
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"
-        th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
+    <link
+      href="../static/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+      th:href="@{/vendor/bootstrap/css/bootstrap.min.css}"
+    />
 
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-</head>
-
-<body>
-    <header th:replace="fragments/header.html :: top">
-    </header>
+  <body>
+    <header th:replace="fragments/header.html :: top"></header>
 
     <main class="container">
-        <div class="row justify-content-center">
-            <div class="text-center" style="min-width: 600px;">
-                <a href="/todo" class="btn mb-4" style="color: inherit;"><i class="fas fa-plus"></i> Add a
-                    Todo</a>
-                <div class="card my-4 card-custom">
-                    <h5 class="card-header header-custom">Here are your Todos</h5>
-                    <div class="card-body text-center" th:each="todos : ${todos}">
-                        <p class="mt-1" th:text="${todos.todoDate} + ' -> ' + ${todos.content}">Content</p>
-                        <span class="justify-content-center">
-                            <a th:href="@{/delete/{id}(id = ${todos.id})}" class="btn" style="color: inherit;"><i
-                                    class='fas fa-trash-alt'></i></a>
-                            <a th:href="@{/todo/{id}(id = ${todos.id})}" class="btn" style="color: inherit;"><i
-                                    class='fas fa-pencil-alt'></i></a>
-                        </span>
-                    </div>
-                </div>
+      <div class="row justify-content-center">
+        <div class="text-center card-size">
+          <a href="/todo" class="btn mb-4" style="color: inherit"
+            ><i class="fas fa-plus"></i> Add a Todo</a
+          >
+          <div class="card my-4 card-custom">
+            <h5 class="card-header header-custom">Here are your Todos</h5>
+            <div class="card-body text-center" th:each="todos : ${todos}">
+              <p
+                class="mt-1"
+                th:text="${todos.todoDate} + ' -> ' + ${todos.content}"
+              >
+                Content
+              </p>
+              <span class="justify-content-center">
+                <a
+                  th:href="@{/delete/{id}(id = ${todos.id})}"
+                  class="btn"
+                  style="color: inherit"
+                  ><i class="fas fa-trash-alt"></i
+                ></a>
+                <a
+                  th:href="@{/todo/{id}(id = ${todos.id})}"
+                  class="btn"
+                  style="color: inherit"
+                  ><i class="fas fa-pencil-alt"></i
+                ></a>
+              </span>
             </div>
+          </div>
         </div>
-
+      </div>
     </main>
 
-    <footer th:replace="fragments/footer.html :: bottom">
-    </footer>
+    <footer th:replace="fragments/footer.html :: bottom"></footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="../static/vendor/jquery/jquery.min.js" th:src="@{/vendor/jquery/jquery.min.js}"></script>
-    <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"
-        th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js }"></script>
+    <script
+      src="../static/vendor/jquery/jquery.min.js"
+      th:src="@{/vendor/jquery/jquery.min.js}"
+    ></script>
+    <script
+      src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"
+      th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js }"
+    ></script>
     <!-- Fontawsome -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-</body>
-
+  </body>
 </html>
