--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -5,23 +5,26 @@ body {
 
 body {
   background-color: #143642 !important;
-  font-family: 'Roboto Mono', monospace !important;
+  font-family: "Roboto Mono", monospace !important;
   font-weight: bold;
 }
 
-main h1, p, main a, h3 {
-    color: #558c8c !important;
-    text-align: center;
+main h1,
+p,
+main a,
+h3,
+h4 {
+  color: #558c8c !important;
+  text-align: center;
 }
 
-main a:hover{
-    color: #d9fff5 !important;
+main a:hover {
+  color: #d9fff5 !important;
 }
 
 .container {
-    height: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
