fix footer position with phone keypad

--- a/src/main/resources/templates/todo.html
+++ b/src/main/resources/templates/todo.html
@@ -65,7 +65,7 @@
   <body>
     <header th:replace="fragments/header.html :: top"></header>
 
-    <main class="container">
+    <main class="container" style="flex: 1">
       <div class="row justify-content-center">
         <div class="text-center card-size">
           <h4>What do you want to do ?</h4>
