--- a/src/main/resources/templates/todos.html
+++ b/src/main/resources/templates/todos.html
@@ -58,7 +58,7 @@
   <body>
     <header th:replace="fragments/header.html :: top"></header>
 
-    <main class="container">
+    <main class="container" style="flex: 1">
       <div class="row justify-content-center">
         <div class="text-center card-size">
           <a href="/todo" class="btn mb-4" style="color: inherit"
