--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,12 +1,11 @@
-html,
-body {
-  height: 100%;
-}
-
 body {
   background-color: #143642 !important;
   font-family: "Roboto Mono", monospace !important;
   font-weight: bold;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 main h1,
