--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
   <body>
     <header th:replace="fragments/header.html :: top"></header>
 
-    <main class="container">
+    <main class="container" style="flex: 1">
       <div class="row justify-content-center mt-4">
         <div class="col-lg-12">
           <h1>Hello World !</h1>
