--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,15 +3,17 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="utf-8" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>Your Todo List</title>
     <meta
       name="description"
       content="End of training, with the last project at WCS school, in order to mobilize the knowledge aquired during the session"
     />
     <meta name="author" content="Sylène Manusset" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <title>Your Todo List</title>
 
     <link
       rel="shortcut icon"
